--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "6a4d8837-8ab2-55b6-992f-10b707f373f9"
 authors = ["chaanks <jarod8405@gmail.com>"]
 version = "0.1.0"
 
+[deps]
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
