--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["chaanks <jarod8405@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Genie = "c43c736e-a2d1-11e8-161f-af95117fbd1e"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [extras]
